--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,10 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "spatie/laravel-fractal": "^5.7",
+        "laravel/ui": "^2.0",
         "nicolaslopezj/searchable": "1.*",
-        "santigarcor/laratrust": "5.2.8"
+        "santigarcor/laratrust": "5.2.8",
+        "spatie/laravel-fractal": "^5.7"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
